[package]
name = "inherits"
version = "0.1.2"
edition = "2021"
description = "Improved Practices for the Composition Pattern in Rust"
repository = "https://github.com/Anglebase/inherit.git"
license = "MIT"
readme = "README.MD"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.39"
syn = "2.0.99"
